luci-theme-openwrt-2020: fix truncated error badges in tabs

--- a/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
+++ b/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
@@ -802,6 +802,7 @@ ul > li {
 	opacity: 1;
 	height: 1.8em;
 	max-height: none;
+	overflow: visible;
 }
 
 .cbi-tabmenu > li > a {
